--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+# this is the landing page for using the baiscs of html css javascript and this is 
+landing page is about the gym open source platform 
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 
