--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ landing page is about the gym open source platform
                           <td>Yes</svg></td>
                         </tr>
                         <tr>
-                          <th scope="row" class="text-start">Extra security</th>
+                          <th scope="row" class="text-start">Extra security provide </th>
                           <td>Yes</td>
                           <td>Yes</td>
                           <td>Yes</svg></td>
